<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="horizontal">
    <Button
        android:id="@+id/regBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:gravity="top|right" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
<TextView
    android:layout_width="match_parent"
    android:layout_height="25dp"
    android:text="@string/login"
    android:textAlignment="center"
    android:gravity="center_horizontal">

</TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress">

        </EditText>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/pasword"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </TextView>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/passwEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left">
        <Button
            android:id="@+id/logBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/enter"

            >

        </Button>
    </LinearLayout>
</LinearLayout>